Make tables that are kids of inlines act sorta like inline-table.  Bug 360065, r+sr=dbaron